--- a/Stylesheet/games.css
+++ b/Stylesheet/games.css
@@ -95,12 +95,12 @@ header #navigation .info nav li {
 }
 
 body header #banner {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("./Resources/Icons/wallpaper.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../Resources/Icons/wallpaper.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;   
     width: 100vw;
-    height: 60vh;
+    height: 40vh;
     position: relative;
 }
 
@@ -129,20 +129,17 @@ main article {
     margin: auto auto;
 }
 
-main article .info,
-main article .icon {
+main article iframe {
+    margin: auto auto;
+}
+
+main article .credits,
+main article .description {
     height: auto;
     width: 50%;
 }
 
-main article .icon img {
-    height: 250px;
-    width: auto;
-    display: block;
-    margin: auto auto;
-}
-
-main article .info button {
+main article .credits button {
     padding: 8px 36px;
     margin-top: 10px;
     border: 2px solid #8abbff;
@@ -158,14 +155,14 @@ main article .info button {
     cursor: pointer;
 }
 
-main article .info button span {
+main article .credits button span {
     cursor: pointer;
     display: inline-block;
     position: relative;
     transition: 0.5s;
 }
   
-main article .info button span:after {
+main article .credits button span:after {
     content: '\00bb';
     position: absolute;
     opacity: 0;
@@ -174,17 +171,13 @@ main article .info button span:after {
     transition: 0.5s;
 }
   
-main article .info button:hover span {
+main article .credits button:hover span {
     padding-right: 25px;
 }
 
-main article .info button:hover span:after {
+main article .credits button:hover span:after {
     opacity: 1;
     right: 0;
-}
-
-main hr {
-    width: 1100px;
 }
 
 /* Footer */
