--- a/Stylesheet/general.css
+++ b/Stylesheet/general.css
@@ -95,13 +95,20 @@ header #navigation .info nav li {
 }
 
 body header #banner {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("./Resources/Icons/wallpaper.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../Resources/Icons/wallpaper.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;   
     width: 100vw;
-    height: 40vh;
     position: relative;
+}
+
+body header .main {
+    height: 60vh;
+}
+
+body header .general {
+    height: 40vh;
 }
 
 body header #banner .banner-text h1 {
