--- a/Stylesheet/games.css
+++ b/Stylesheet/games.css
@@ -95,7 +95,7 @@ header #navigation .info nav li {
 }
 
 body header #banner {
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../Resources/Icons/wallpaper.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../Resources/Icons/wallpaper.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;   
