--- a/Stylesheet/games.css
+++ b/Stylesheet/games.css
@@ -234,13 +234,13 @@ footer hr {
 /* Adjusting For Screen Size */
 
 @media only screen and (max-width: 480px) {
-
+    main article {
+        display: none;
+    }
 } 
 
 @media only screen and (min-width: 480px) and (max-width: 1024px){
-
-}
-
-@media only screen and (min-width: 1024px) and (max-width: 1600px){
-
+    main article {
+        display: none;
+    }
 }
