--- a/Stylesheet/games.css
+++ b/Stylesheet/games.css
@@ -186,9 +186,26 @@ footer article {
     margin: 70px auto;
 }
 
+footer .footer-navigation {
+    height: auto;
+    width: 24%;
+    margin: 0 auto;
+    list-style-type: none;
+}
+
+footer .footer-navigation nav li {
+    opacity: 0.6;
+    margin-bottom: 13px;
+}
+
+footer .footer-navigation nav li:hover {
+    opacity: 1;
+}
+
 footer .icons {
     height: auto;
-    width: 40%;
+    width: 24%;
+    padding-top: 5px;
 }
 
 footer .icons img {
@@ -206,7 +223,7 @@ footer .icons icons img {
     margin-right: 15px;
     margin-left: 3px;
     opacity: 0.6;
-    border-radius: 4px;
+    border-radius: 6px;
 }
 
 footer .icons icons img:hover {
@@ -215,7 +232,7 @@ footer .icons icons img:hover {
 
 footer .info {
     height: auto;
-    width: 60%;
+    width: 52%;
 }
 
 footer .copyright {
