--- a/Stylesheet/header.css
+++ b/Stylesheet/header.css
@@ -21,42 +21,44 @@ body {
   z-index: 1;
   display: block;
 }
-.topnav img {
+.topnav .content {
+  width: 1100px;
+  margin: auto auto;
+}
+.topnav .content img {
   float: left;
   height: 40px;
   width: auto;
   margin-top: 20px;
-  margin-left: 30px;
 }
-.topnav nav {
+.topnav .content nav {
   display: flex;
   float: right;
 }
-.topnav nav li {
+.topnav .content nav li {
   list-style-type: none;
 }
-.topnav nav li a {
+.topnav .content nav li a {
   float: right;
   display: block;
   color: #fbfbfb;
   text-decoration: none;
   opacity: 0.87;
   text-align: center;
-  padding: 14px 16px;
+  padding: 14px 0;
   font-size: 20px;
   align-items: center;
   margin-top: 15px;
-  margin-right: 15px;
+  margin-left: 32px;
 }
-.topnav nav li .icon {
+.topnav .content nav li .icon {
   display: none;
   height: 40px;
   width: auto;
   font-size: 30px;
   margin-top: 10px;
-  margin-right: 15px;
 }
-.topnav nav li a:hover {
+.topnav .content nav li a:hover {
   color: white;
 }
 .banner {
@@ -84,45 +86,45 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   color: white;
-} 
+}
+
 @media screen and (max-width: 600px) {
-  .topnav img {
-    margin-left: 15px;
+  .topnav .content {
+    width: 80vw;
   }
-  .topnav nav li a {
+  .topnav .content nav li a {
     display: none;
+    margin: 0 0;
   }
-  .topnav nav li a.icon {
+  .topnav .content nav li a.icon {
     float: right;
     display: block;
   }
-  .topnav.responsive {position: relative;}
-  .topnav.responsive nav li .icon {
+  .topnav.responsive .content {position: relative;}
+  .topnav.responsive .content nav li .icon {
     position: absolute;
     right: 0;
     top: 0;
   }
-  .topnav.responsive nav li a {
+  .topnav.responsive .content nav li a {
     float: none;
     display: block;
     text-align: left;
   }
-  .topnav.responsive nav {
-    background-color: #3B5998;
-    background-size: cover;
-    width: 100vw;
+  .topnav.responsive .content nav {
+    width: 100%;
     z-index: 2;
     flex-wrap: wrap;
     flex-direction: column;
-    padding-top: 15px;
-    padding-bottom: 10px;
+    padding-top: 20px;
+    padding-bottom: 15px;
   }
   .topnav.responsive {
     position: fixed;
     background-color: #3B5998;
     background-size: cover;
     width: 100vw;
-    height: 80px;
+    height: auto;
     top: 0;
     left: 50%;
     transform: translate(-50%, 0);
