--- a/Stylesheet/header.css
+++ b/Stylesheet/header.css
@@ -1,3 +1,7 @@
+/*  Author: Abdulrahman Jouhari
+    Project: AJouhari Personal Website
+    Date: July 2nd, 2020 */
+    
 html {
   box-sizing: border-box;
   color: #fbfbfb;
