--- a/Stylesheet/error.css
+++ b/Stylesheet/error.css
@@ -1,29 +1,35 @@
+/*  Author: Abdulrahman Jouhari
+    Project: AJouhari Personal Website
+    Date: July 2nd, 2020 */
+
+/* General */
 html {
     overflow: hidden;
 }
+
+/* Banner */
 .banner {
+    position: relative;
     background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../Resources/Icons/wallpaper.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;   
-    width: 100vw;
-    height: 100vh;
-    top: 0;
-    padding-top: 80px;
-    left: 50%;
     transform: translate(-50%, 0);
-    position: relative;
-  }
-  .banner .banner-text h1 {
-    font-size: 100px;
-    font-weight: bold;
-    opacity: 0.87;
-  }
-  .banner .banner-text {
-    text-align: center;
-    position: absolute;
-    top: 50%;
+    height: 100vh;
+    width: 100vw;
+    top: 0;
     left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-  }
+}
+.banner .banner-text {
+  position: absolute;
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  color: white;
+  text-align: center;
+}
+.banner .banner-text h1 {
+  font-size: 100px;
+  font-weight: bold;
+  opacity: 0.87;
+}
