--- a/Stylesheet/footer.css
+++ b/Stylesheet/footer.css
@@ -1,116 +1,204 @@
+/*  Author: Abdulrahman Jouhari
+    Project: AJouhari Personal Website
+    Date: July 2nd, 2020 */
+
+/* General */
 html {
     box-sizing: border-box;
-    color: #fbfbfb;
     background-color: #1f1f1f;
-    font-family: Arial, Helvetica, sans-serif;
     overflow-x: hidden;
+    color: #fbfbfb;
+    font-family: Arial, Helvetica, sans-serif;
 }
-
 body {
     margin: 0;
     padding: p;
 }
 
-p {
-    line-height: 1.5;
-    opacity: 0.6;
-}
-
-a {
-    color: #fbfbfb;
-    text-decoration: none;
-    opacity: 0.87;
-}
-
-h1, h2, h3, h4 {
-    opacity: 0.87;
-}
-
-h2, h3, h4 {
-    text-transform: lowercase;
-}
-
+/* Containers */
 article {
     width: 1050px;
     padding: 70px 0;
     margin: auto auto;
 }
-
 .flex {
     display: flex;
 }
 
-.footer-navigation {
+/* Text */
+h2 {
+    text-transform: lowercase;
+    opacity: 0.87;
+}
+p {
+    line-height: 1.5;
+    opacity: 0.6;
+}
+a {
+    color: #fbfbfb;
+    text-decoration: none;
+}
+
+/* Functions */
+.navigation nav li:hover,
+.social icons img:hover {
+    opacity: 1;
+}
+
+/* Logo & Social Links */
+.social {
+    height: auto;
+    width: 25%;
+}
+.social .logo {
+    height: 160px;
+    width: 160px;
+    margin-top: 20px;
+    margin-bottom: 8px;
+}
+.social icons img {
+    height: 24px;
+    width: 24px;
+    border: 2px solid #8abbff;
+    border-radius: 6px;
+    padding: 4px 4px;
+    opacity: 0.6;
+    margin-right: 16px;
+    margin-left: 5px;
+}
+
+/* Footer Navigation (Quick Links) */
+.navigation {
     height: auto;
     width: 25%;
     margin: 0 auto;
     list-style-type: none;
 }
-
-.footer-navigation nav li {
+.navigation nav {
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+.navigation nav li {
     opacity: 0.6;
     margin-bottom: 17px;
 }
 
-.footer-navigation nav li:hover,
-.icons icons img:hover {
-    opacity: 1;
-}
-
-.icons {
-    height: auto;
-    width: 25%;
-    padding-top: 12px;
-}
-
-.icons img {
-    margin: 10px 0;
-    height: 160px;
-    width: 160px;
-}
-
-.icons icons img {
-    height: 24px;
-    width: 24px;
-    padding: 4px 4px;
-    border: 2px solid #8abbff;
-    margin-top: 0;
-    margin-right: 16px;
-    margin-left: 5px;
-    opacity: 0.6;
-    border-radius: 6px;
-}
-
-.info {
+/* Contact */
+.contact {
     height: auto;
     width: 50%;
 }
 
+/* Copyright */
 .copyright {
     width: 1050px;
-    margin: 20px auto;
+    margin: auto;
     color: #fbfbfb;
     opacity: 1;
 }
-
 hr {
     width: 100%;
     color: #3B5998;
     opacity: 0.6;
 }
 
+/* Adjusting For Screen Sizes */
 @media only screen and (max-width: 479px) {
+    /* Container */
+    article {
+        width: 80vw;
+        padding: 50px 0;
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
 
+    /* Subcontainers */
+    .social {
+        display: none;
+    }
+    .navigation {
+        width: 100%;
+    }
+    .contact {
+        width: 100%;
+    }
+
+    /* Navigation List */
+    .navigation nav {
+        flex-direction: row;
+    }
+    .navigation nav li {
+        width: 40%;
+    }
+    /* Copyright */
+    .copyright {
+        width: 80vw;
+    }
 }
-
 @media only screen and (min-width: 479px) and (max-width: 767px) {
+    /* Container */
+    article {
+        width: 70vw;
+        padding: 50px 0;
+        flex-direction: column;
+        flex-wrap: wrap;
+    }
 
+    /* Subcontainers */
+    .social {
+        display: none;
+    }
+    .navigation {
+        width: 100%;
+    }
+    .contact {
+        width: 100%;
+    }
+
+    /* Navigation List */
+    .navigation nav {
+        flex-direction: row;
+    }
+    .navigation nav li {
+        width: 40%;
+    }
+    /* Copyright */
+    .copyright {
+        width: 70vw;
+    }
 }
-
 @media only screen and (min-width: 767px) and (max-width: 991px) {
+    /* Container */
+    article {
+        width: 700px;
+        padding: 50px 0;
+    }
 
+    /* Subcontainers */
+    .social {
+        display: none;
+    }
+    .navigation {
+        width: 30%;
+    }
+    .contact {
+        width: 70%;
+    }
+    
+    /* Copyright */
+    .copyright {
+        width: 700px;
+    }
 }
-
 @media only screen and (min-width: 991px) and (max-width: 1600px) {
-
+    /* Container */
+    article {
+        width: 900px;
+        padding: 50px 0;
+    }
+    
+    /* Copyright */
+    .copyright {
+        width: 900px;
+    }
 }
